force-app/main/default/objects/FacePlusPlus_Credential__mdt/fields/ApiEndpoint__c.field-meta.xml
<CustomField>
    <fullName>ApiEndpoint__c</fullName>
    <label>API Endpoint</label>
    <type>Text</type>
    <length>255</length>
</CustomField>