force-app/main/default/objects/FacePlusPlus_Credential__mdt/fields/ApiSecret__c.field-meta.xml
<CustomField>
    <fullName>ApiSecret__c</fullName>
    <label>API Secret</label>
    <type>Text</type>
    <length>255</length>
</CustomField>